Cleaning up HTML code in indexNL and indexEN

--- a/indexNL.html
+++ b/indexNL.html
@@ -14,7 +14,7 @@
     <nav class="nav-bar">
         <div class="nav-left">
             <a href="indexEN.html" class="lang-link-a">
-                <p class="lang-link-p">EN</p>
+                <img src="assets/images/united-kingdom-flag.png" alt="UK-flag">
             </a>
             <a href="#top-of-page">Lorenzo</a>
         </div>
@@ -57,13 +57,13 @@
             </div>
         </section>
         <section class="personal-info-top-right">
-            <p>Ik ben <span class="emphasize1 bold">Lorenzo Latinne</span>, een ambitieuze software- en webontwikkelaar in opleiding en ik volg momenteel een Graduaatsopleiding in het Programmeren. Mijn reis in de wereld van IT begon met een diepe bewondering voor hoe technologie ons leven vormgeeft en een verlangen om mijn passies te combineren met een betekenisvolle carrière. <span class="emphasize2 bold">Ik ben op weg om C#, JavaScript, HTML en CSS onder de knie te krijgen</span>, en ik ben er trots op dat ik bijna klaar ben met Harvard’s CS50: Introduction to Computer Science—mijn eerste grote certificering. Dit portfolio is een belangrijk onderdeel van mijn eindproject en een essentiële stap in mijn leertraject.<br><br>
+            <p>Ik ben <span class="emphasize1 bold">Lorenzo Latinne</span>, een ambitieuze software- en webontwikkelaar in opleiding en ik volg momenteel een Graduaatsopleiding in het Programmeren. Mijn reis in de wereld van IT begon met een diepe bewondering voor hoe technologie ons leven vormgeeft en een verlangen om mijn passies te combineren met een betekenisvolle carrière. <span class="emphasize2 bold">Ik ben op weg om C#, JavaScript, HTML en CSS onder de knie te krijgen</span>. Dit portfolio is een belangrijk onderdeel van mijn eindproject en een essentiële stap in mijn leertraject.<br><br>
 
-            Tijdens mijn studie heb ik uitdagende probleemstellingen aangepakt en creatieve projecten ontwikkeld, zoals een persoonlijk portfolio en een Mastermind-spel gebouwd in C#. Deze ervaringen hebben mijn vaardigheden versterkt en mijn enthousiasme voor een toekomst in programmeren aangewakkerd, waar de <span class="emphasize5 bold">mix van logica en creativiteit mij het meest intrigeert</span>.<br><br>
+            Tijdens mijn studie heb ik uitdagende probleemstellingen aangepakt en creatieve projecten ontwikkeld, zoals een persoonlijk portfolio en het bouwen van een Mastermind-spel in C#. Deze ervaringen hebben mijn vaardigheden versterkt en mijn enthousiasme voor een toekomst in programmeren aangewakkerd, waar de <span class="emphasize5 bold">mix van logica en creativiteit mij het meest intrigeert</span>.<br><br>
 
             Voor mijn studie werkte ik vier jaar als Assistent-Manager, waar ik verantwoordelijk was voor marketing, financiën en klantrelaties. Deze ervaring leerde mij het <span class="emphasize4 bold">belang van communicatie en organisatie</span>—vaardigheden waarvan ik weet dat ze mij goed van pas zullen komen in de IT-sector.<br><br>
 
-            Buiten mijn werk haal ik het meeste plezier uit tijd doorbrengen met mijn vrouw en goede vrienden. Onlangs bereikte ik een van mijn trotsste mijlpalen: samen met mijn vrouw een huis kopen terwijl we ons voorbereiden op de komst van ons eerste kind eind 2024. In mijn vrije tijd speel ik graag gitaar, zing ik en luister ik naar muziek, waarbij ik <span class="emphasize3 bold">inspiratie vind in de balans tussen discipline en creativiteit</span>.<br><br>
+            Buiten mijn werk haal ik het meeste plezier uit het tijd doorbrengen met mijn vrouw en vrienden. Onlangs bereikte ik een van mijn trotste mijlpalen: samen met mijn vrouw een huis kopen terwijl we ons voorbereiden op de komst van ons eerste kind eind 2024. In mijn vrije tijd speel ik graag gitaar, zing ik en luister ik naar muziek, waarbij ik <span class="emphasize3 bold">inspiratie vind in de balans tussen discipline en creativiteit</span>.<br><br>
 
             Wat mij het meest motiveert, is de <span class="emphasize1 bold">oneindige reis van leren</span>. Ik houd van de uitdaging om nieuwe ideeën te verkennen en problemen op te lossen in een vakgebied dat mij echt interesseert. IT biedt niet alleen de mogelijkheid voor persoonlijke groei, maar ook om een betekenisvolle balans tussen werk en privéleven te bereiken—iets dat ik zeer waardeer terwijl ik uitkijk naar dit spannende hoofdstuk in mijn leven.<br><br>
             </p>
