Added language options to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,10 @@
 <header>
     <nav class="nav-bar">
         <div class="nav-left">
-            <a href="#top-of-page">Lorenzo</a>
+            <a href="indexNL.html">
+                <img src="assets/images/netherlands-flag.png" alt="UK-flag">
+            </a>
+            <a href="#top-of-page">Lorenzo</a><br>
         </div>
         <div class="nav-middle">
             <ul>
@@ -42,7 +45,7 @@
 
 <main>
     <div id="top-of-page">
-        <h3>Intro</h3><br>
+        <h3>Intro</h3>
         <p> Welcome to My Portfolio!<br><br>
             Hi, I’m Lorenzo Latinne, an aspiring software and web developer with a passion for learning and creating.
             I’m currently pursuing an Associate Degree in Programming and honing my skills in C#, JavaScript, HTML, and
@@ -61,7 +64,7 @@
     </div>
     <br>
     <section class="log-book">
-        <h3>Log Book</h3><br>
+        <h3>Log Book</h3>
         <table>
             <thead>
             <tr>
@@ -191,34 +194,54 @@
                 <td>Week 12</td>
                 <td>Introduction Corda Campus<br>
                     Explanation web project sprint 3<br>
-                    LDB Code review<br>
-                    Submit C# project sprint 3
+                    <span class="pe-test">LDB Code review</span>
                 </td>
                 <td class="deadline-task">
-
+                    Submit C# project sprint 3
                 </td>
             </tr>
             <tr>
                 <td>Week 13</td>
-                <td>PE10 C# project sprint 3<br>
+                <td><span class="pe-test">PE10 C# project sprint 3</span><br>
                     Questions portfolio<br>
-                    Info sessions Thalento, PE11 (web project)<br>
+                    Info sessions Thalento
                     Christmas holidays
                 </td>
                 <td class="deadline-task">
-
+                    PE11 (web project)
                 </td>
             </tr>
             <tr>
+                <td colspan="3" class="holiday-row">Christmas holidays</td>
+            </tr>
+            <tr>
                 <td>Week 14</td>
-                <td>Finishing portfolio<br>
-                    PE12 (portfolio)</td>
+                <td>Finishing portfolio
+                </td>
                 <td class="deadline-task">
-
+                    PE12 (portfolio)
                 </td>
             </tr>
             </tbody>
         </table>
+    </section>
+    <section>
+        <h3>Growth</h3>
+        <p>
+            Why programming?
+        </p>
+        <p class="emphasize1">
+            Why did I choose to study programming?
+        </p>
+        <p>
+
+        </p>
+        <p class="emphasize1">
+            Why do I think this profession suits me?
+        </p>
+        <p>
+
+        </p>
     </section>
 </main>
 </body>
