--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="portfolio.css">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <title>Lorenzo Latinne - Portfolio</title>
 </head>
 <body>
@@ -40,22 +41,20 @@
 </header>
 
 <main>
-    <div id="top-of-page">
-        <h3>Intro</h3><br>
-        <p> Welcome to My Portfolio!<br><br>
-            Hi, I’m Lorenzo Latinne, an aspiring software and web developer with a passion for learning and creating.
-            I’m currently pursuing an Associate Degree in Programming and honing my skills in C#, JavaScript, HTML, and
-            CSS. This portfolio serves as both a final project and a showcase of my growth.<br><br>
-
-            Here, you’ll find highlights of my work, including projects like a Mastermind game built in C# and this
-            portfolio itself. Each project reflects my enthusiasm for blending logic and creativity—a hallmark of
-            programming that I find deeply rewarding.<br><br>
-
-            Before diving into IT, I gained valuable experience as a Manager’s Assistant, where I sharpened my
-            organizational and communication skills. Outside of coding, I enjoy spending time with my wife and friends,
-            playing guitar, and exploring the balance of discipline and creativity through music.<br><br>
-
-            Thanks for visiting—I’m excited to share my journey and future projects with you!<br>
+    <div id="top-of-page" class="introduction">
+        <h3>Intro</h3>
+        <p>Welcome to My Portfolio!</p>
+        <p>
+           Hi, I’m Lorenzo Latinne, an aspiring software and web developer with a passion for learning and creating. I’m currently pursuing an Associate Degree in Programming and honing my skills in C#, JavaScript, HTML, and CSS. This portfolio serves as both a final project and a showcase of my growth.
+        </p>
+        <p>
+            Here, you’ll find highlights of my work, including projects like a Mastermind game built in C# and this portfolio itself. Each project reflects my enthusiasm for blending logic and creativity—a hallmark of programming that I find deeply rewarding.
+        </p>
+        <p>
+            Before diving into IT, I gained valuable experience as a Manager’s Assistant, where I sharpened my organizational and communication skills. Outside of coding, I enjoy spending time with my wife and friends, playing guitar, and exploring the balance of discipline and creativity through music.
+        </p>
+        <p>
+            Thanks for visiting—I’m excited to share my journey and future projects with you!
         </p>
     </div>
     <br>
@@ -72,9 +71,12 @@
             <tbody>
             <tr>
                 <td>Week 1</td>
-                <td>Intro WPL<br>
-                    Scratch<br>
-                    Explanation PE1 (Scratch)
+                <td>
+                    <ul>
+                        <li>Intro WPL</li>
+                        <li>Scratch</li>
+                        <li>Explanation PE1 (Scratch)</li>
+                    </ul>
                 </td>
                 <td class="deadline-task">
 
@@ -82,12 +84,15 @@
             </tr>
             <tr>
                 <td>Week 2</td>
-                <td>GIT<br>
-                    Github<br>
-                    POP intro<br>
-                    X-factor and SDG's<br>
-                    POP motivation en core values<br>
-                    Orientation process
+                <td>
+                    <ul>
+                        <li>GIT</li>
+                        <li>Github</li>
+                        <li>POP intro</li>
+                        <li>X-factor and SDG's</li>
+                        <li>POP motivation en core values</li>
+                        <li>Orientation process</li>
+                    </ul>
                 </td>
                 <td class="deadline-task">
 
@@ -95,11 +100,14 @@
             </tr>
             <tr>
                 <td>Week 3</td>
-                <td>POP reflection<br>
-                    POP autonomy en responsibility<br>
-                    Versioning with GIT<br>
-                    Explanation PE2 (GIT task 1)<br>
-                    Explanation PE3 (reflection)
+                <td>
+                    <ul>
+                        <li>POP reflection</li>
+                        <li>POP autonomy en responsibility</li>
+                        <li>Versioning with GIT</li>
+                        <li>Explanation PE2 (GIT task 1)</li>
+                        <li>Explanation PE3 (reflection)</li>
+                    </ul>
                 </td>
                 <td class="deadline-task">
                     PE1 (Scratch)
@@ -190,11 +198,10 @@
                 <td>Week 12</td>
                 <td>Introduction Corda Campus<br>
                     Explanation web project sprint 3<br>
-                    LDB Code review<br>
-                    Submit C# project sprint 3
+                    <span class="pe-test">LDB Code review</span><br>
                 </td>
                 <td class="deadline-task">
-
+                    Submit C# project sprint 3
                 </td>
             </tr>
             <tr>
@@ -202,12 +209,15 @@
                 <td>PE10 C# project sprint 3<br>
                     Questions portfolio<br>
                     Info sessions Thalento, PE11 (web project)<br>
-                    Christmas holidays
                 </td>
                 <td class="deadline-task">
 
                 </td>
             </tr>
+            <tr>
+                <td colspan="3" rowspan="2" class="holiday-row">Christmas holidays</td>
+            </tr>
+            <tr></tr>
             <tr>
                 <td>Week 14</td>
                 <td>Finishing portfolio<br>
