--- a/portfolio.html
+++ b/portfolio.html
@@ -19,19 +19,16 @@
         <div class="nav-middle">
             <ul>
                 <li>
-                    <a href="indexEN.html#top-of-page">ABOUT ME</a>
+                    <a href="portfolio.html#top-of-page">INTRO</a>
                 </li>
                 <li>
-                    <a href="indexEN.html#skills-section">SKILLS</a>
+                    <a href="portfolio.html#log-book">LOG BOOK</a>
                 </li>
                 <li>
-                    <a href="indexEN.html#education-section">EDUCATION</a>
+                    <a href="portfolio.html#growth">GROWTH</a>
                 </li>
                 <li>
-                    <a href="indexEN.html#experience-section">EXPERIENCE</a>
-                </li>
-                <li>
-                    <a href="portfolio.html">PORTFOLIO</a>
+                    <a href="indexEN.html">CV</a>
                 </li>
             </ul>
         </div>
@@ -44,26 +41,31 @@
 </header>
 
 <main>
-    <div id="top-of-page">
-        <h3>Intro</h3>
-        <p> Welcome to My Portfolio!<br><br>
+    <section id="top-of-page" class="intro">
+            <h3>Intro</h3>
+            <p>
+                Welcome to My Portfolio!
+            </p>
+            <p>
             Hi, I’m Lorenzo Latinne, an aspiring software and web developer with a passion for learning and creating.
             I’m currently pursuing an Associate Degree in Programming and honing my skills in C#, JavaScript, HTML, and
-            CSS. This portfolio serves as both a final project and a showcase of my growth.<br><br>
-
-            Here, you’ll find highlights of my work, including projects like a Mastermind game built in C# and this
-            portfolio itself. Each project reflects my enthusiasm for blending logic and creativity—a hallmark of
-            programming that I find deeply rewarding.<br><br>
-
-            Before diving into IT, I gained valuable experience as a Manager’s Assistant, where I sharpened my
-            organizational and communication skills. Outside of coding, I enjoy spending time with my wife and friends,
-            playing guitar, and exploring the balance of discipline and creativity through music.<br><br>
-
-            Thanks for visiting—I’m excited to share my journey and future projects with you!<br>
-        </p>
-    </div>
-    <br>
-    <section class="log-book">
+            CSS. This portfolio serves as both a final project and a showcase of my growth.
+            </p>
+            <p>
+                Here, you’ll find highlights of my work, including projects like a Mastermind game built in C# and this
+                portfolio itself. Each project reflects my enthusiasm for blending logic and creativity—a hallmark of
+                programming that I find deeply rewarding.
+            </p>
+            <p>
+                Before diving into IT, I gained valuable experience as a Manager’s Assistant, where I sharpened my
+                organizational and communication skills. Outside of coding, I enjoy spending time with my wife and friends,
+                playing guitar, and exploring the balance of discipline and creativity through music.
+            </p>
+            <p>
+                Thanks for visiting—I’m excited to share my journey and future projects with you!
+            </p>
+        </section>
+    <section id="log-book" class="log-book">
         <h3>Log Book</h3>
         <table>
             <thead>
@@ -225,23 +227,268 @@
             </tbody>
         </table>
     </section>
-    <section>
+    <section id="growth" class="growth">
         <h3>Growth</h3>
-        <p>
-            Why programming?
-        </p>
-        <p class="emphasize1">
-            Why did I choose to study programming?
-        </p>
-        <p>
-
-        </p>
-        <p class="emphasize1">
-            Why do I think this profession suits me?
-        </p>
-        <p>
-
-        </p>
+        <div class="why-questions">
+            <h4>Why programming?</h4>
+            <p class="emphasize1 bold">
+                Why did I choose to study programming?
+            </p>
+            <p>
+                I chose to study programming because it opens doors to countless opportunities and empowers me to shape the digital world. It’s a highly in-demand skill with competitive salaries and the flexibility to work across industries or even start my own business. Programming sharpens my problem-solving skills and enables me to transform creative ideas into tangible solutions. I find it exciting to design and build tools that can make tasks easier or even innovate entirely new processes. The sense of accomplishment that comes from solving complex challenges and seeing my creations come to life is incredibly rewarding.
+            </p>
+            <p>
+                I love that it’s a future-proof skill, keeping me relevant in a tech-driven world that’s constantly changing. The supportive community and wealth of accessible resources make learning both engaging and enjoyable. Programming also offers the chance to contribute to solving global challenges, whether through improving healthcare, advancing sustainability, or enhancing communication. It’s a field that encourages lifelong learning and personal growth, which inspires me to keep pushing my limits and exploring new possibilities.
+            </p>
+            <p class="emphasize1 bold">
+                Why do I think this profession suits me?
+            </p>
+            <p>
+                A profession in programming suits me well because I thrive on problem-solving and enjoy tackling challenges with a blend of logical thinking and creativity. The process of breaking down complex issues and devising efficient solutions is both stimulating and deeply satisfying for me. I’m passionate about technology and constantly curious about how systems operate, which aligns perfectly with the innovative and ever-evolving nature of programming. Exploring new tools and frameworks excites me, as it opens up endless opportunities to grow and refine my skills.
+            </p>
+            <p>
+                The flexibility to work remotely and maintain a healthy work-life balance makes this career even more appealing, offering the freedom to excel professionally while dedicating time to personal interests and relationships. This balance is crucial for sustaining motivation and long-term success. I also find great fulfillment in building practical solutions that address real-world needs, whether it’s simplifying tasks, enhancing productivity, or creating something entirely new. Seeing the tangible impact of my work not only inspires me but also reinforces my decision to pursue programming as more than just a career—it’s a meaningful and rewarding path that aligns with my values and aspirations.
+            </p>
+        </div>
+        <div class="competencies">
+            <h4>Programmer competencies:</h4>
+            <table>
+                <thead>
+                <tr>
+                    <th class="title-col" colspan="3">
+                        Course-specific learning outcomes (OLR)<br>
+                        Associate degree in Programming (PRO)
+                    </th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td class="role-col">
+                        ROLE
+                    </td>
+                    <td colspan="2" class="content-col">
+                        DESIGNER
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        OLR1
+                    </td>
+                    <td class="description-col">
+                        The graduate prepares the realization of a software project.
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        OLR2
+                    </td>
+                    <td class="description-col">
+                        Based on the analysis, the graduate makes a substantiated proposal for a) the design, b) the programming language and c) the methodology. The graduate coordinates the proposal with the software developer, analyst and/or project leader.
+                    </td>
+                </tr>
+                <tr>
+                    <td class="role-col">
+                        ROLE
+                    </td>
+                    <td colspan="2" class="content-col">
+                        PROGRAMMER
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        OLR3
+                    </td>
+                    <td class="description-col">
+                        The graduate realizes software applications and data structures. The graduate works systematically within the context of the project plan, the available tools and the proposed methodology.
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        OLR4
+                    </td>
+                    <td class="description-col">
+                        The graduate is partly responsible for their own digital work environment and contributes to the shared infrastructure required for it developing, testing and putting projects into production.
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        OLR5
+                    </td>
+                    <td class="description-col">
+                        The graduate programs software applications according to the standards and agreements within the organization.
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        OLR6
+                    </td>
+                    <td class="description-col">
+                        The graduate examines, in consultation with the software developer, analyst and/or project leader, whether the delivered product requires maintenance and/or needs adjustments. The graduate carries out maintenance and adjustments in a project-based manner, taking into account with previously made agreements.
+                    </td>
+                </tr>
+                <tr>
+                    <td class="role-col">
+                        ROLE
+                    </td>
+                    <td colspan="2" class="content-col">
+                        TESTER
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        OLR7
+                    </td>
+                    <td class="description-col">
+                        The graduate checks the operation and functionality of the realized code according to test scenarios and improves it based on that feedback from the software developer, analyst, project leader and/or users.
+                    </td>
+                </tr>
+                <tr>
+                    <td class="role-col">
+                        ROLE
+                    </td>
+                    <td colspan="2" class="content-col">
+                        COMMUNICATOR / TEAM PLAYER
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        OLR8
+                    </td>
+                    <td class="description-col">
+                        The graduate works constructively and actively in a multidisciplinary team and actively participates during consultation moments. The graduate helps find solutions to avoid problems.
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        OLR9
+                    </td>
+                    <td class="description-col">
+                        The graduate communicates and reports efficiently on the work delivered, adapted to the target audience and uses it for this purpose appropriate English jargon.
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        OLR10
+                    </td>
+                    <td class="description-col">
+                        The graduate documents the self-developed applications in an adequate and clear manner using a knowledge database and according to agreements within the organization. The graduate provides qualitative input for the user manuals, reference guides and online resources.
+                    </td>
+                </tr>
+                <tr>
+                    <td class="role-col">
+                        ROLE
+                    </td>
+                    <td colspan="2" class="content-col">
+                        LIFELONG LEARNING IT PROFESSIONAL
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        OLR11
+                    </td>
+                    <td class="description-col">
+                        The graduate maintains his level of expertise by actively monitoring relevant sustainable IT and social developments to follow up.
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        OLR12
+                    </td>
+                    <td class="description-col">
+                        The graduate is self-critical, develops the necessary self-knowledge and uses this to promote his personal and professional growth.
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        OLR13
+                    </td>
+                    <td class="description-col">
+                        The graduate acts deontologically and sustainably, and takes into account security and privacy guidelines.
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+            <h4>Positioning within profile:</h4>
+            <p class="emphasize5 bold">Questions: </p>
+            <ol>
+                <li>Where am I at currently?</li>
+                <li>What am I doing well already?</li>
+                <li>What am I still unable to do?</li>
+            </ol>
+            <br>
+            <div class="position">
+                <div class="position-roles">
+                    <p class="bold">
+                        Designer:
+                    </p>
+                    <p>
+                        1.
+                    </p>
+                    <p>
+                        2.
+                    </p>
+                    <p>
+                        3.
+                    </p>
+                </div>
+                <div class="position-roles">
+                    <p class="bold">
+                        Programmer:
+                    </p>
+                    <p>
+                        1.
+                    </p>
+                    <p>
+                        2.
+                    </p>
+                    <p>
+                        3.
+                    </p>
+                </div>
+                <div class="position-roles">
+                    <p class="bold">
+                        Tester:
+                    </p>
+                    <p>
+                        1.
+                    </p>
+                    <p>
+                        2.
+                    </p>
+                    <p>
+                        3.
+                    </p>
+                </div>
+                <div class="position-roles">
+                    <p class="bold">
+                        Communicator / Team-player:
+                    </p>
+                    <p>
+                        1.
+                    </p>
+                    <p>
+                        2.
+                    </p>
+                    <p>
+                        3.
+                    </p>
+                </div>
+                <div class="position-roles">
+                    <p class="bold">
+                        Lifelong learning IT professional:
+                    </p>
+                    <p>
+                        1.
+                    </p>
+                    <p>
+                        2.
+                    </p>
+                    <p>
+                        3.
+                    </p>
+                </div>
+            </div>
+        </div>
     </section>
 </main>
 </body>
